--- a/config.org
+++ b/config.org
@@ -41,7 +41,6 @@ Test some package
  )
 
 (setq undo-limit 80000000
-      auto-save-default t
       truncate-string-ellipsis "…"
       password-cache-expiry nil   
       scroll-preserve-screen-position 'always 
@@ -203,16 +202,15 @@ Thanks to Po Lu, scrolling in emacs is great again!
 *** auto-save
 recommend use with vc to avoid accident lost.
 #+begin_src emacs-lisp
-(add-to-list 'load-path "~/.emacs.d/site-lisp/auto-save/") ; add auto-save to your load-path
+(setq auto-save-default nil)
+
+(add-to-list 'load-path "~/.emacs.d/site-lisp/auto-save/")
 (require 'auto-save)
 (setq auto-save-idle 0.5)
 (setq auto-save-silent t)
 (setq auto-save-delete-trailing-whitespace nil)
 
 (auto-save-enable)
-(add-hook 'makefile-mode-hook #'(lambda () (fset 'makefile-warn-suspicious-lines 'ignore)))
-
-
 
 #+end_src
 
@@ -1286,5 +1284,9 @@ vpn may cause this fail!
 ** python
 #+begin_src emacs-lisp
 ;; black and yapf not found?
+#+end_src
+** makefile
+#+begin_src emacs-lisp
+(add-hook 'makefile-mode-hook #'(lambda () (fset 'makefile-warn-suspicious-lines 'ignore)))
 #+end_src
 
